opam-version: "2.0"
name:         "opam-dot"
maintainer:   "Gabriel Radanne <drupyog@zoho.com>"
authors:      [ "Gabriel Radanne" ]
homepage:     "https://github.com/Drup/opam-dot"
bug-reports:  "https://github.com/Drup/opam-dot/issues"
dev-repo:     "git+https://github.com/Drup/opam-dot.git"
synopsis: "OPAM dependencies as graphs"
license: "MIT"
version: "dev"
flags: plugin
build: [
  ["jbuilder" "build" "-j" jobs "@install"]
]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
  "opam-state" "bos"
]
